# AutoMusicVideo

./: .dockerignore  .gitignore  Dockerfile  README.md  audio.py  audio_test.py  bucket.py  cloud_function.py  cloud_sync.py  cloud_sync_test.py  compose.yaml  config.py  deepdaze.py  deepdaze_clip.py  go  go.py  imagegen.py  imagegen_legacy.py  isolate_vocals_test.py  log.py  log_print.py  lyrics.py  lyrics_test.py  main.py  model.py  music_video.py  nn1.json  nn2.json  pretty_print.py  push-container-to-gcp.sh  requirements.txt  run_locally.py  run_on_kaggle.py  run_on_modal.py  scheduled.py  stitch.py  stitch_test.py  storyboard.py  storyboard_test.py  subtitles.py  (+5 more)
compile/: README.md  __init__.py  main.py  pyproject.toml
compile/compile/: __init__.py  audio.py  audio_test.py  main.py  stitch.py
editing_room/: README.md  pyproject.toml  requirements.txt
editing_room/editing_room/: __init__.py  audio.py  audio_test.py  beats.py  beats_test.py  music_video.py  music_video_test.py  scene.py  scene_test.py
storyboard/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
storyboard/scripts/: clear-logs.sh  gce-setup.sh
storyboard/src/: __init__.py  cloud_storage.py  cloud_storage_test.py  cloud_sync.py  config.py  deepdaze.py  deepdaze_clip.py  job_queue.py  job_queue_test.py  log_print.py  lyrics_test.py  main.py  song_storage.py  storage.py  storyboard.py  storyboard_test.py  text_to_image.py
storyboard/src/data/: test-table-of-contents.json
storyboard/storyboard/: __init__.py  __main__.py  cloud_storage.py  config.py  deepdaze.py  deepdaze_clip.py  input_audio.py  job_queue.py  log_print.py  lyrics.py  lyrics_test.py  main.py  main_test.py  storyboard.py  storyboard_test.py  text_to_image.py  text_to_image_test.py
storyboard/storyboard/cloud_storage/: __init__.py  buckets.py  buckets_test.py  inputs.py  outputs.py
(+23 files in other folders)
