[project]
name = "compile"
version = "0.0.1"
authors = [
  { name="Tyler Perin", email="tyler@perin.email" },
]
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"compile" = "compile"}

[tool.setuptools.package-data]
"compile.test-data"= ["*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
