[project]
name = "editing_room"
version = "0.0.1"
authors = [
  { name="Tyler Perin", email="tyler@perin.email" },
]
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools]
package-dir = {"editing_room" = "editing_room"}

[tool.setuptools.package-data]
"editing_room.test_audio" = ["*.mp3"]
"editing_room.test_gifs" = ["*.gif"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}
